      because the result will be different for invalid corner radius values.
    + New overloads with floating-point parameters.
+ New GraphicsPathExtensions class:
  + New AddRoundRectangle methods - just exposing the old private implementation for GraphicsPath with the improved
    corner radius handling mentioned above.
  + New ToPath method


~~~~~~~~~
! v8.1.0:
~~~~~~~~~

* Common changes
================
* Referencing KGySoft.Drawing.Core v8.1.0, which improves performance, especially regarding Palette operations,
  optimized quantizers and vector operations.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

! KGySoft.Drawing.Imaging namespace
===================================
! ReadableBitmapDataExtensions class:
  ! ToBitmap, BeginToBitmap, ToBitmapAsync methods:
    ! When target pixel format is not specified, these method no longer return a Bitmap with Format16bppGrayScale
      pixel format because it is basically supported by this library only but not by the native GDI+ operations.
      Instead, a Bitmap with Format8bppIndexed format with a gray-scale palette is returned, even though it may end
      up in loss of information. If you need the original behavior you still can specify the pixel format.
    - When the target pixel format is an indexed one but there is no target palette specified and the source also
      has no palette, then the back color, alpha threshold and working color space of the source are now respected.


~~~~~~~~~
! v8.0.0:
~~~~~~~~~

+ Assembly changes:
===================
+ Targeting also .NET Framework 4.6 and .NET Standard 2.1

! KGySoft.Drawing namespace
===========================
! PixelFormatExtensions class:
  ! GetInfo method: For pixel formats with linear gamma the Prefers128BitColors property is now set in the result.
  + ToPixelFormat method: Supporting the new KnownPixelFormat values of v8.0.0
* BitmapExtensions class: